# Clipper

./: .gitignore  AGENTS.md  README.md  build.ps1  installer.iss  main.py  pyproject.toml  requirements.txt
assets/: kill_skull.npy
core/: __init__.py  audio_analyzer.py  clip_extractor.py  highlight_detector.py  models.py  pipeline.py  sound_matcher.py  video_analyzer.py
tests/: test_export_helpers.py  test_highlight_detector.py  test_sound_matcher.py  test_video_analyzer.py
ui/: __init__.py  app.py  theme.py
ui/widgets/: __init__.py  file_selector.py  log_console.py  progress_panel.py
utils/: __init__.py  config.py  ffmpeg_wrapper.py  file_manager.py  logger.py
